# CheckSuperCalls

./: .gitignore  CMakeLists.txt  CheckSuperCalls.sln  README.md  test_config.xml
CheckSuperCalls/: Algorithms.h  Annex.cpp  Annex.h  CheckSuperCalls.vcxproj  CheckSuperCalls.vcxproj.filters  Class.h  Code.cpp  Code.h  Config.cpp  Config.h  Defs.cpp  Defs.h  Exception.h  Files.cpp  Files.h  Main.cpp  Result.cpp  Result.h  Strings.cpp  Strings.h  Workers.cpp  Workers.h
Tests/: ClassA.h  ClassA_ansi_crlf.h  ClassB_utf8.cpp  ClassB_utf8.hpp  ClassB_utf8_lf.cpp  ClassB_utf8_lf.hpp  test.cfg  test.paths
Tests/Alfa/: ClassT.h
Tests/Alfa/Bravo/: ClassC_cr.cpp  ClassC_cr.h
Tests/Charlie/: ClassD.cpp  ClassD.h
